// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Overview -> View should render when historical data is found 1`] = `
<div>
  <EuiSpacer
    size="l"
  />
  <ServiceListRequest
    render={[Function]}
  />
</div>
`;

exports[`Service Overview -> View should render when historical data is found 2`] = `
Object {
  "items": Array [],
  "noItemsMessage": <EmptyMessage
    heading="No services were found"
    subheading={null}
  />,
}
`;

exports[`Service Overview -> View should render when historical data is not found 1`] = `
<div>
  <EuiSpacer
    size="l"
  />
  <ServiceListRequest
    render={[Function]}
  />
</div>
`;

exports[`Service Overview -> View should render when historical data is not found 2`] = `
Object {
  "items": Array [],
  "noItemsMessage": <EmptyMessage
    heading="Looks like you don't have any services with APM installed. Let's add some!"
    subheading={
      <SetupInstructionsLink
        buttonFill={true}
      />
    }
  />,
}
`;
